{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 27,
  "lineage": "82cb0494-bfeb-acf0-2015-4e1f4893493c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_01",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:674416511128:instance/i-0abba8ecea72291b6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abba8ecea72291b6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04d932712c0811937",
            "private_dns": "ip-172-17-1-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.1.7",
            "public_dns": "ec2-3-80-50-105.compute-1.amazonaws.com",
            "public_ip": "3.80.50.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000dc9ba99da02006",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02faa4f82ed0fecbb",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005da12a4b8c6bf7a"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu_image"
          ]
        },
        {
          "index_key": "subnet_02",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:674416511128:instance/i-0d3836c1adc01bf41",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3836c1adc01bf41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c0fcbc4be2c9aa7",
            "private_dns": "ip-172-17-2-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.2.50",
            "public_dns": "ec2-52-203-149-9.compute-1.amazonaws.com",
            "public_ip": "52.203.149.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ee93d8433ef83015",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e14244de61c821e",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005da12a4b8c6bf7a"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu_image"
          ]
        },
        {
          "index_key": "subnet_03",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:674416511128:instance/i-0e954bc297e709490",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e954bc297e709490",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0828f5ca46f6751bf",
            "private_dns": "ip-172-17-3-215.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.3.215",
            "public_dns": "ec2-18-209-228-214.compute-1.amazonaws.com",
            "public_ip": "18.209.228.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f89211472dc5bb7c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0afd26f7c0d3f487c",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005da12a4b8c6bf7a"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674416511128:internet-gateway/igw-0671c8d52a6b362df",
            "id": "igw-0671c8d52a6b362df",
            "owner_id": "674416511128",
            "tags": {
              "Name": "tf_igw"
            },
            "tags_all": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-0b19f6d2101f22a3d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:674416511128:loadbalancer/app/tf-alb/c9eda7955d12a4f2",
            "arn_suffix": "app/tf-alb/c9eda7955d12a4f2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-alb-1497184842.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:674416511128:loadbalancer/app/tf-alb/c9eda7955d12a4f2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c759796956882f09"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02faa4f82ed0fecbb"
              },
              {
                "subnet_id": "subnet-07e14244de61c821e"
              },
              {
                "subnet_id": "subnet-0afd26f7c0d3f487c"
              }
            ],
            "subnets": [
              "subnet-02faa4f82ed0fecbb",
              "subnet-07e14244de61c821e",
              "subnet-0afd26f7c0d3f487c"
            ],
            "vpc_id": "vpc-0b19f6d2101f22a3d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:674416511128:listener/app/tf-alb/c9eda7955d12a4f2/22d635e944c1c92f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:674416511128:targetgroup/tf-tg/d81eec5668eae6b1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:674416511128:listener/app/tf-alb/c9eda7955d12a4f2/22d635e944c1c92f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:674416511128:loadbalancer/app/tf-alb/c9eda7955d12a4f2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:674416511128:targetgroup/tf-tg/d81eec5668eae6b1",
            "arn_suffix": "targetgroup/tf-tg/d81eec5668eae6b1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:674416511128:targetgroup/tf-tg/d81eec5668eae6b1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b19f6d2101f22a3d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_01",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:674416511128:targetgroup/tf-tg/d81eec5668eae6b1-20230205111827371000000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:674416511128:targetgroup/tf-tg/d81eec5668eae6b1",
            "target_id": "i-0abba8ecea72291b6"
          },
          "dependencies": [
            "aws_instance.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu_image"
          ]
        },
        {
          "index_key": "subnet_02",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:674416511128:targetgroup/tf-tg/d81eec5668eae6b1-20230205111827665200000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:674416511128:targetgroup/tf-tg/d81eec5668eae6b1",
            "target_id": "i-0d3836c1adc01bf41"
          },
          "dependencies": [
            "aws_instance.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu_image"
          ]
        },
        {
          "index_key": "subnet_03",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:674416511128:targetgroup/tf-tg/d81eec5668eae6b1-20230205111827410000000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:674416511128:targetgroup/tf-tg/d81eec5668eae6b1",
            "target_id": "i-0e954bc297e709490"
          },
          "dependencies": [
            "aws_instance.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674416511128:route-table/rtb-098cb3bbf019c740e",
            "id": "rtb-098cb3bbf019c740e",
            "owner_id": "674416511128",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0671c8d52a6b362df",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_rtb"
            },
            "tags_all": {
              "Name": "tf_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b19f6d2101f22a3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3770699d8cf81d5",
            "route_table_id": "rtb-098cb3bbf019c740e",
            "subnet_id": "subnet-02faa4f82ed0fecbb"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f255422b8b6ca7a4",
            "route_table_id": "rtb-098cb3bbf019c740e",
            "subnet_id": "subnet-07e14244de61c821e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_03",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9e03194906ef7ef",
            "route_table_id": "rtb-098cb3bbf019c740e",
            "subnet_id": "subnet-0afd26f7c0d3f487c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674416511128:security-group/sg-0c759796956882f09",
            "description": "Allow HTTPS and HTTP inbound traffic for application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c759796956882f09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_alb_sg",
            "name_prefix": "",
            "owner_id": "674416511128",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b19f6d2101f22a3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674416511128:security-group/sg-005da12a4b8c6bf7a",
            "description": "Allow HTTPS and HTTP inbound traffic for the instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005da12a4b8c6bf7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c759796956882f09"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c759796956882f09"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_instances_sg",
            "name_prefix": "",
            "owner_id": "674416511128",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b19f6d2101f22a3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674416511128:subnet/subnet-02faa4f82ed0fecbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02faa4f82ed0fecbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674416511128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_01"
            },
            "tags_all": {
              "Name": "subnet_01"
            },
            "vpc_id": "vpc-0b19f6d2101f22a3d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674416511128:subnet/subnet-07e14244de61c821e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e14244de61c821e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674416511128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_02"
            },
            "tags_all": {
              "Name": "subnet_02"
            },
            "vpc_id": "vpc-0b19f6d2101f22a3d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_03",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674416511128:subnet/subnet-0afd26f7c0d3f487c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afd26f7c0d3f487c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674416511128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_03"
            },
            "tags_all": {
              "Name": "subnet_03"
            },
            "vpc_id": "vpc-0b19f6d2101f22a3d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674416511128:vpc/vpc-0b19f6d2101f22a3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0e81f62db34677bf0",
            "default_route_table_id": "rtb-07d9e60a5ec807ee4",
            "default_security_group_id": "sg-0b0c1b2b6397fde30",
            "dhcp_options_id": "dopt-0ef6744e2cf44db47",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b19f6d2101f22a3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d9e60a5ec807ee4",
            "owner_id": "674416511128",
            "tags": {
              "Name": "tf_vpc"
            },
            "tags_all": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}